--- a/demo.html
+++ b/demo.html
@@ -37,7 +37,7 @@
             
             // Simulate the game logic for demonstration
             if (guess === 7) {
-                result.innerHTML = '<span style="color: green;">Correct! You win my guy!</span>';
+                result.innerHTML = '<span style="color: green;">Correct! You win!</span>';
             } else if (guess < 7) {
                 result.innerHTML = '<span style="color: orange;">Too low!</span>';
             } else {
