--- a/julia_sdl_wasm/sdl2.html
+++ b/julia_sdl_wasm/sdl2.html
@@ -219,6 +219,7 @@ canvas.emscripten { border: 0px none; background-color: black; }
       };
     </script>
     <script async type="text/javascript" src="sdl2.js"></script>
+    <script type="text/javascript" src="sdl_bridge.js"></script>
     <script type="text/javascript" src="game_loop.js"></script>
   </body>
 </html>
