--- a/platformer_web.html
+++ b/platformer_web.html
@@ -481,7 +481,7 @@
             }
             
             // Handle jumping
-            if (gameState.keySpace && gameState.onGround) {
+            if (gameState.keySpace) {
                 gameState.velY = -12;
                 gameState.onGround = false;
             }
