--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@ canvas.emscripten { border: 0px none; background-color: black; }
         };
       };
     </script>
-    <script async type="text/javascript" src="combined_game_wasm/combined_game.js"></script>
+    <script async type="text/javascript" src="game_wasm/game.js"></script>
     <script src="index.js"></script>
   </body>
 </html>
